--- a/Coding Challenge 2/Coding Challenge 2.csproj
+++ b/Coding Challenge 2/Coding Challenge 2.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ChallengeSolver.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TlsDictionary.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
